refactor puppet agent module

--- a/templates/puppet/puppet_agent.conf.erb
+++ b/templates/puppet/puppet_agent.conf.erb
@@ -8,7 +8,7 @@
 [agent]
     certname = <%= fqdn %>
     environment = <%= environment %>
-    server = puppetmaster.us.chs.net
+    server = <%= puppetmaster %>
     report = true
     classfile = $vardir/classes.txt
     localconfig = $vardir/localconfig
